# Refactoring_NoiseFiltersR

./: .gitignore  .pre-commit-config.yaml  Example.ipynb  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
delete_scripts/: :q  delete_test_evaluate_filters.py  run_evaluate.sh
output/: results.csv
scripts/: Example.ipynb  utils.py
scripts/filters/: ENN.py  Example.ipynb  Example.py  Filter.py  FilteredData.py  HARF.py  Mode.py  test_HARF.py  tomeklinks.py
scripts/filters/.ipynb_checkpoints/: Example-checkpoint.ipynb
scripts/filters/Ji/: mode_filter.py  test_mode_filter.py
src/: utils.py
src/filters/: ENN.py  Filter.py  HARF.py  Mode.py  Tomeklinks.py  tomeklinks.py
tests/: _test_ENN.py  _test_HARF.py  _test_MODE.py  _test_all_filters.py  test_ENN.py  test_MODE.py  test_all_parameters.py  test_plot_results.py  test_smp.py  test_tmklinks.py  test_tomeklinks.ipynb  test_unit_shapes.py
