[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filters"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["pandas","numpy","scikit-learn"]


[project.optional-dependencies]
test = ["pytest", "matplotlib"]

[tool.hatch]
build.targets.wheel.packages = ["scripts/filters"]


[tool.pytest.ini_options]
# pythonpath = ["scripts"]