[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filters"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["pandas","numpy","scikit-learn"]


[project.optional-dependencies]
test = ["pytest", "matplotlib", "seaborn"]

[tool.hatch]
build.targets.wheel.packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src","src/filters", "output"]
